--- a/index.html
+++ b/index.html
@@ -6,46 +6,68 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Виталий Пашин</title>
+    <title>Aliance Production</title>
   </head>
   <body>
-    <div class="page-wrapper">
-      <header class="header">
-        <span class="hello">Привет 👋</span>
-        <p class="hello-text">
-          Делаю сайты на заказ:
-          <br />дизайн, код, продвижение
-        </p>
-      </header>
+    <div class="header">
+      <nav class="navbar">
+        <a href="./" class="header-logo">
+          <img
+            class="logo-light"
+            src="img/logo-light.svg"
+            alt="Aliance Production"
+          />
+        </a>
 
-      <div class="container">
-        <div class="user">
-          <img src="img/avatar.png" alt="Виталий Пашин" class="user-avatar" />
-          <h1 class="user-name">Виталий Пашин</h1>
-          <p class="user-profession">Разработчик сайтов</p>
-        </div>
-        <!-- /.user -->
-        <div class="card">
-          <div class="buttons">
-            <a href="https://vk.com/vitamin" class="button vk">
-              <img src="img/icons/vk.svg" alt="" class="button-icon" />
-            </a>
-            <a href="https://t.me/vitamin" class="button tg">
-              <img src="img/icons/tg.svg" alt="" class="button-icon" />
-            </a>
+        <ul class="header-nav">
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">О компании</a>
+            <!-- /.header-nav-link -->
+          </li>
+          <!-- /.header-nav-item -->
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Контрактное производство</a>
+            <!-- /.header-nav-link -->
+          </li>
+          <!-- /.header-nav-item -->
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Собственные торговые марки</a>
+            <!-- /.header-nav-link -->
+          </li>
+          <!-- /.header-nav-item -->
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Новости</a>
+            <!-- /.header-nav-link -->
+          </li>
+          <!-- /.header-nav-item -->
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Контакты</a>
+            <!-- /.header-nav-link -->
+          </li>
+          <!-- /.header-nav-item -->
+        </ul>
 
-            <!-- /.button -->
-          </div>
+        <div class="header-phone">
+          <img src="img/phone.svg" alt="icon-phone" />
+          <a href="tel:+74996861014" class="header-phone-link"
+            >+7 (499) 686-10-14</a
+          >
+          <!-- /.header-phone-link -->
         </div>
-        <!-- /.buttons -->
-      </div>
+        <!-- /.header-phone -->
+        <button class="header-button button">Получить консультацию</button>
+
+        <!-- /.header-nav -->
+      </nav>
+      <!-- /.navbar -->
     </div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
