--- a/index.html
+++ b/index.html
@@ -9,65 +9,104 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Aliance Production</title>
   </head>
   <body>
-    <div class="header">
-      <nav class="navbar">
-        <a href="./" class="header-logo">
-          <img
-            class="logo-light"
-            src="img/logo-light.svg"
-            alt="Aliance Production"
-          />
-        </a>
+    <header>
+      <div class="header header-image">
+        <nav class="navbar">
+          <a href="./" class="header-logo">
+            <img
+              class="logo-light"
+              src="img/logo-light.svg"
+              alt="Aliance Production"
+            />
+          </a>
 
-        <ul class="header-nav">
-          <li class="header-nav-item">
-            <a href="#" class="header-nav-link">О компании</a>
-            <!-- /.header-nav-link -->
-          </li>
-          <!-- /.header-nav-item -->
-          <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Контрактное производство</a>
-            <!-- /.header-nav-link -->
-          </li>
-          <!-- /.header-nav-item -->
-          <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Собственные торговые марки</a>
-            <!-- /.header-nav-link -->
-          </li>
-          <!-- /.header-nav-item -->
-          <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Новости</a>
-            <!-- /.header-nav-link -->
-          </li>
-          <!-- /.header-nav-item -->
-          <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Контакты</a>
-            <!-- /.header-nav-link -->
-          </li>
-          <!-- /.header-nav-item -->
+          <ul class="header-nav">
+            <li class="header-nav-item">
+              <a href="#" class="header-nav-link">О компании</a>
+              <!-- /.header-nav-link -->
+            </li>
+            <!-- /.header-nav-item -->
+            <li class="header-nav-item">
+              <a href="#" class="header-nav-link">Контрактное производство</a>
+              <!-- /.header-nav-link -->
+            </li>
+            <!-- /.header-nav-item -->
+            <li class="header-nav-item">
+              <a href="#" class="header-nav-link">Собственные торговые марки</a>
+              <!-- /.header-nav-link -->
+            </li>
+            <!-- /.header-nav-item -->
+            <li class="header-nav-item">
+              <a href="#" class="header-nav-link">Новости</a>
+              <!-- /.header-nav-link -->
+            </li>
+            <!-- /.header-nav-item -->
+            <li class="header-nav-item">
+              <a href="#" class="header-nav-link">Контакты</a>
+              <!-- /.header-nav-link -->
+            </li>
+            <!-- /.header-nav-item -->
+          </ul>
+
+          <div class="header-phone">
+            <img src="img/phone.svg" alt="icon-phone" />
+            <a href="tel:+74996861014" class="header-phone-link"
+              >+7 (499) 686-10-14</a
+            >
+            <!-- /.header-phone-link -->
+          </div>
+          <!-- /.header-phone -->
+          <button class="navbar-button button">Получить консультацию</button>
+
+          <!-- /.header-nav -->
+        </nav>
+        <!-- /.navbar -->
+
+        <div class="container">
+          <div class="header-content">
+            <div class="seporater"></div>
+            <h1 class="header-title">
+              Комплексное обеспечение товарами и расходными материалами бизнеса
+            </h1>
+            <p class="header-text">
+              Высокий уровень вовлечения представителей целевой аудитории
+              является четким доказательством простого факта: высококачественный
+              прототип будущего проекта напрямую зависит от анализа существующих
+              паттернов поведения.
+            </p>
+            <div class="button">Подробнее о компании</div>
+          </div>
+          <!-- /.header-content -->
+          <ul class="header-features">
+            <li class="header-features-item">
+              <img src="img/features/time.svg" alt="" class="header-features-image-icon">
+              <p class="header-features-text">Непрерывная работа c 2017 года</p>
+            </li>
+            <li class="header-features-item">
+              <img src="img/features/certificate.svg" alt="" class="header-features-image-icon">
+              <p class="header-features-text">Вся продукция сертифицирована</p>
+            </li>
+            <li class="header-features-item">
+              <img src="img/features/control.svg" alt="" class="header-features-image-icon">
+              <p class="header-features-text">Контроль качества на всех этапах</p>
+            </li>
+            <li class="header-features-item">
+              <img src="img/features/delivery.svg" alt="" class="header-features-image-icon">
+              <p class="header-features-text">Возможны поставки по всей России</p>
+            </li>
+            <li class="header-features-item">
+              <img src="img/features/speed.svg" alt="" class="header-features-image-icon">
+              <p class="header-features-text">Оперативное производство</p>
+            </li>
+          </div>
         </ul>
-
-        <div class="header-phone">
-          <img src="img/phone.svg" alt="icon-phone" />
-          <a href="tel:+74996861014" class="header-phone-link"
-            >+7 (499) 686-10-14</a
-          >
-          <!-- /.header-phone-link -->
-        </div>
-        <!-- /.header-phone -->
-        <button class="header-button button">Получить консультацию</button>
-
-        <!-- /.header-nav -->
-      </nav>
-      <!-- /.navbar -->
-    </div>
-
+        <!-- /.container -->
+      </div>
+    </header>
     <script src="js/main.js"></script>
   </body>
 </html>
