add: pixel perfect

--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
 
           <p class="header-text">
             Высокий уровень вовлечения представителей целевой аудитории является
-            четким доказательством простого факта.
+            четким доказательством простого факта: высококачественный прототип
+            будущего проекта напрямую зависит от анализа существующих паттернов
+            поведения.
           </p>
 
-          <button class="button">Подробнее о компании</button>
+          <button class="button header-button">Подробнее о компании</button>
         </div>
 
         <ul class="header-features">
@@ -70,7 +72,7 @@
             <svg class="logo-svg" width="36" height="36">
               <use href="img/sprite.svg#time"></use>
             </svg>
-            <p class="header-features-text">Работаем с 2017 года</p>
+            <p class="header-features-text">Непрерывная работа c 2017 года</p>
           </li>
 
           <li class="header-features-item">
@@ -84,14 +86,14 @@
             <svg class="logo-svg" width="36" height="36">
               <use href="img/sprite.svg#control"></use>
             </svg>
-            <p class="header-features-text">Контроль качества</p>
+            <p class="header-features-text">Контроль качества на всех этапах</p>
           </li>
 
           <li class="header-features-item">
             <svg class="logo-svg" width="36" height="36">
               <use href="img/sprite.svg#delivery"></use>
             </svg>
-            <p class="header-features-text">Доставка по России</p>
+            <p class="header-features-text">Возможны поставки по всей России</p>
           </li>
 
           <li class="header-features-item">
