--- a/index.html
+++ b/index.html
@@ -17,7 +17,72 @@
   </head>
 
   <body>
+    <div class="mobile-menu">
+      <ul class="mobile-menu-nav">
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">О компании</a>
+        </li>
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">Контрактное производство</a>
+          <ul class="mobile-submenu">
+            <li class="mobile-submenu-item">
+              <a class="mobile-submenu-link"" href="#" class="href">Автомобильная химия</a>
+            </li>
+            <li class="mobile-submenu-item">
+              <a class="mobile-submenu-link"" href="#" class="href">Бытовая химия</a>
+            </li>
+            <li class="mobile-submenu-item">
+              <a class="mobile-submenu-link"" href="#" class="href">Дезинфицирующие средства</a>
+            </li>
+          </ul>
+        </li>
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">Собственные торговые марки</a>
+        </li>
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">Новости</a>
+        </li>
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">Контакты</a>
+        </li>
+      </ul>
+
+      <a href="tel:+74996861014" class="mobile-phone">+7 (499) 686-10-14</a>
+    <div class="mobile-info">
+      <svg class="button-icon" width="24" height="24">
+          <use href="img/mark.svg"></use>
+        </svg>
+        <address class="mobile-info-address">
+          г. Мосвка, Холодильный пер. 4к1с8
+        </address>
+    </div>
+    <!-- /.mobile-info -->
+      <div class="mobile-info">
+      <svg class="button-icon" width="24" height="24">
+          <use href="img/mail.svg"></use>
+        </svg>
+        <a href="mailto:a.dragunov@tdaliance.ru" class="mobile-info-email">
+          a.dragunov@tdaliance.ru
+        </a>
+    </div>
+
+      <div class="mobile-info">
+      <svg class="button-icon" width="24" height="24">
+          <use href="img/vk.svg"></use>
+        </svg>
+        <svg class="button-icon" width="24" height="24">
+          <use href="img/inst.svg"></use>
+        </svg>
+        </a>
+    </div>
+    
+    </div>
     <nav class="navbar">
+      <a href="#" class="mobile-menu-toggle">
+        <div class="mobile-menu-line"></div>
+        <div class="mobile-menu-line"></div>
+        <div class="mobile-menu-line"></div>
+      </a>
       <a href="./" class="header-logo">
         <svg class="logo-svg">
           <use href="img/sprite.svg#logo-light"></use>
@@ -37,15 +102,17 @@
       </ul>
 
       <div class="header-phone">
-        <svg class="phone-icon" width="24" height="24">
-          <use href="img/sprite.svg#phone"></use>
-        </svg>
         <a href="tel:+74996861014" class="header-phone-link">
           +7 (499) 686-10-14
         </a>
       </div>
 
-      <button class="navbar-button button">Получить консультацию</button>
+      <button class="navbar-button button">
+        <svg class="button-icon" width="24" height="24">
+          <use href="img/sprite.svg#phone"></use>
+        </svg>
+        <span class="button-text"> Получить консультацию </span>
+      </button>
     </nav>
     <header class="header header-image">
       <div class="container">
