add: add narrows

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Aliance Production</title>
   </head>
@@ -26,13 +26,19 @@
           <a href="#" class="mobile-menu-link">Контрактное производство</a>
           <ul class="mobile-submenu">
             <li class="mobile-submenu-item">
-              <a class="mobile-submenu-link"" href="#" class="href">Автомобильная химия</a>
+              <a class="mobile-submenu-link" href="#" class="href"
+                >Автомобильная химия</a
+              >
             </li>
             <li class="mobile-submenu-item">
-              <a class="mobile-submenu-link"" href="#" class="href">Бытовая химия</a>
+              <a class="mobile-submenu-link" href="#" class="href"
+                >Бытовая химия</a
+              >
             </li>
             <li class="mobile-submenu-item">
-              <a class="mobile-submenu-link"" href="#" class="href">Дезинфицирующие средства</a>
+              <a class="mobile-submenu-link" href="#" class="href"
+                >Дезинфицирующие средства</a
+              >
             </li>
           </ul>
         </li>
@@ -48,34 +54,32 @@
       </ul>
 
       <a href="tel:+74996861014" class="mobile-phone">+7 (499) 686-10-14</a>
-    <div class="mobile-info">
-      <svg class="button-icon" width="24" height="24">
+      <div class="mobile-info">
+        <svg class="button-icon" width="24" height="24">
           <use href="img/mark.svg"></use>
         </svg>
         <address class="mobile-info-address">
           г. Мосвка, Холодильный пер. 4к1с8
         </address>
-    </div>
-    <!-- /.mobile-info -->
+      </div>
+      <!-- /.mobile-info -->
       <div class="mobile-info">
-      <svg class="button-icon" width="24" height="24">
+        <svg class="button-icon" width="24" height="24">
           <use href="img/mail.svg"></use>
         </svg>
         <a href="mailto:a.dragunov@tdaliance.ru" class="mobile-info-email">
           a.dragunov@tdaliance.ru
         </a>
-    </div>
+      </div>
 
       <div class="mobile-info">
-      <svg class="button-icon" width="24" height="24">
+        <svg class="button-icon" width="24" height="24">
           <use href="img/vk.svg"></use>
         </svg>
         <svg class="button-icon" width="24" height="24">
           <use href="img/inst.svg"></use>
         </svg>
-        </a>
-    </div>
-    
+      </div>
     </div>
     <nav class="navbar">
       <a href="#" class="mobile-menu-toggle">
@@ -134,42 +138,62 @@
           <button class="button header-button">Подробнее о компании</button>
         </div>
 
-        <ul class="header-features">
-          <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
-              <use href="img/sprite.svg#time"></use>
-            </svg>
-            <p class="header-features-text">Непрерывная работа c 2017 года</p>
-          </li>
+        <!-- Slider main container [Основной блок слайдера] -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <ul class="swiper-wrapper header-features">
+            <!-- Slides -->
+            <li class="swiper-slide header-features-item">
+              <svg class="logo-svg" width="36" height="36">
+                <use href="img/sprite.svg#time"></use>
+              </svg>
+              <p class="header-features-text">Непрерывная работа c 2017 года</p>
+            </li>
+            <li class="swiper-slide header-features-item">
+              <svg class="logo-svg" width="36" height="36">
+                <use href="img/sprite.svg#certificate"></use>
+              </svg>
+              <p class="header-features-text">Вся продукция сертифицирована</p>
+            </li>
+            <li class="swiper-slide header-features-item">
+              <svg class="logo-svg" width="36" height="36">
+                <use href="img/sprite.svg#control"></use>
+              </svg>
+              <p class="header-features-text">
+                Контроль качества на всех этапах
+              </p>
+            </li>
+            <li class="swiper-slide header-features-item">
+              <svg class="logo-svg" width="36" height="36">
+                <use href="img/sprite.svg#delivery"></use>
+              </svg>
+              <p class="header-features-text">
+                Возможны поставки по всей России
+              </p>
+            </li>
+            <li class="swiper-slide header-features-item">
+              <svg class="logo-svg" width="36" height="36">
+                <use href="img/sprite.svg#speed"></use>
+              </svg>
+              <p class="header-features-text">Оперативное производство</p>
+            </li>
+          </ul>
 
-          <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
-              <use href="img/sprite.svg#certificate"></use>
-            </svg>
-            <p class="header-features-text">Вся продукция сертифицирована</p>
-          </li>
-
-          <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
-              <use href="img/sprite.svg#control"></use>
-            </svg>
-            <p class="header-features-text">Контроль качества на всех этапах</p>
-          </li>
-
-          <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
-              <use href="img/sprite.svg#delivery"></use>
-            </svg>
-            <p class="header-features-text">Возможны поставки по всей России</p>
-          </li>
-
-          <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
-              <use href="img/sprite.svg#speed"></use>
-            </svg>
-            <p class="header-features-text">Оперативное производство</p>
-          </li>
-        </ul>
+          <!-- кнопки навигации вперед/назад -->
+          <div class="slider-buttons">
+            <div class="slider-button-prev">
+              <svg width="36" height="24">
+                <use href="img/sprite.svg#arrow-prev"></use>
+              </svg>
+            </div>
+            <div class="slider-button-next">
+              <svg width="36" height="24">
+                <use href="img/sprite.svg#arrow-next"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- /.slider-buttons -->
+        </div>
       </div>
     </header>
 
@@ -215,6 +239,8 @@
       </div>
       <!-- /.container -->
     </section>
+
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
