--- a/index.html
+++ b/index.html
@@ -88,18 +88,13 @@
         <div class="mobile-menu-line"></div>
       </a>
       <a href="./" class="header-logo">
-        <svg class="logo-svg logo-light">
+        <svg class="logo-svg">
           <use href="img/sprite.svg#logo-light"></use>
-        </svg>
-        <svg class="logo-svg logo">
-          <use href="img/sprite.svg#logo"></use>
         </svg>
       </a>
 
       <ul class="header-nav">
-        <li class="header-nav-item">
-          <a href="#" class="header-nav-link">О компании</a>
-        </li>
+        <li><a href="#" class="header-nav-link">О компании</a></li>
         <li>
           <a href="#" class="header-nav-link">Контрактное производство</a>
         </li>
@@ -144,60 +139,66 @@
         </div>
 
         <!-- Slider main container [Основной блок слайдера] -->
-        <div class="swiper">
-          <!-- Additional required wrapper -->
-          <ul class="swiper-wrapper header-features">
-            <!-- Slides -->
-            <li class="swiper-slide header-features-item">
-              <svg class="logo-svg" width="36" height="36">
-                <use href="img/sprite.svg#time"></use>
-              </svg>
-              <p class="header-features-text">Непрерывная работа c 2017 года</p>
-            </li>
-            <li class="swiper-slide header-features-item">
-              <svg class="logo-svg" width="36" height="36">
-                <use href="img/sprite.svg#certificate"></use>
-              </svg>
-              <p class="header-features-text">Вся продукция сертифицирована</p>
-            </li>
-            <li class="swiper-slide header-features-item">
-              <svg class="logo-svg" width="36" height="36">
-                <use href="img/sprite.svg#control"></use>
-              </svg>
-              <p class="header-features-text">
-                Контроль качества на всех этапах
-              </p>
-            </li>
-            <li class="swiper-slide header-features-item">
-              <svg class="logo-svg" width="36" height="36">
-                <use href="img/sprite.svg#delivery"></use>
-              </svg>
-              <p class="header-features-text">
-                Возможны поставки по всей России
-              </p>
-            </li>
-            <li class="swiper-slide header-features-item">
-              <svg class="logo-svg" width="36" height="36">
-                <use href="img/sprite.svg#speed"></use>
-              </svg>
-              <p class="header-features-text">Оперативное производство</p>
-            </li>
-          </ul>
+        <div class="swiper-container">
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <ul class="swiper-wrapper header-features">
+              <!-- Slides -->
+              <li class="swiper-slide header-features-item">
+                <svg class="logo-svg" width="36" height="36">
+                  <use href="img/sprite.svg#time"></use>
+                </svg>
+                <p class="header-features-text">
+                  Непрерывная работа c 2017 года
+                </p>
+              </li>
+              <li class="swiper-slide header-features-item">
+                <svg class="logo-svg" width="36" height="36">
+                  <use href="img/sprite.svg#certificate"></use>
+                </svg>
+                <p class="header-features-text">
+                  Вся продукция сертифицирована
+                </p>
+              </li>
+              <li class="swiper-slide header-features-item">
+                <svg class="logo-svg" width="36" height="36">
+                  <use href="img/sprite.svg#control"></use>
+                </svg>
+                <p class="header-features-text">
+                  Контроль качества на всех этапах
+                </p>
+              </li>
+              <li class="swiper-slide header-features-item">
+                <svg class="logo-svg" width="36" height="36">
+                  <use href="img/sprite.svg#delivery"></use>
+                </svg>
+                <p class="header-features-text">
+                  Возможны поставки по всей России
+                </p>
+              </li>
+              <li class="swiper-slide header-features-item">
+                <svg class="logo-svg" width="36" height="36">
+                  <use href="img/sprite.svg#speed"></use>
+                </svg>
+                <p class="header-features-text">Оперативное производство</p>
+              </li>
+            </ul>
 
-          <!-- кнопки навигации вперед/назад -->
-          <div class="slider-buttons">
-            <div class="slider-button-prev">
-              <svg width="36" height="24">
-                <use href="img/sprite.svg#arrow-prev"></use>
-              </svg>
+            <!-- кнопки навигации вперед/назад -->
+            <div class="slider-buttons">
+              <div class="slider-button-prev">
+                <svg width="36" height="24">
+                  <use href="img/sprite.svg#arrow-prev"></use>
+                </svg>
+              </div>
+              <div class="slider-button-next">
+                <svg width="36" height="24">
+                  <use href="img/sprite.svg#arrow-next"></use>
+                </svg>
+              </div>
             </div>
-            <div class="slider-button-next">
-              <svg width="36" height="24">
-                <use href="img/sprite.svg#arrow-next"></use>
-              </svg>
-            </div>
+            <!-- /.slider-buttons -->
           </div>
-          <!-- /.slider-buttons -->
         </div>
       </div>
     </header>
