add: did some fixes

--- a/index.html
+++ b/index.html
@@ -26,17 +26,13 @@
           <a href="#" class="mobile-menu-link">Контрактное производство</a>
           <ul class="mobile-submenu">
             <li class="mobile-submenu-item">
-              <a class="mobile-submenu-link" href="#" class="href"
-                >Автомобильная химия</a
-              >
+              <a class="mobile-submenu-link" href="#">Автомобильная химия</a>
             </li>
             <li class="mobile-submenu-item">
-              <a class="mobile-submenu-link" href="#" class="href"
-                >Бытовая химия</a
-              >
+              <a class="mobile-submenu-link" href="#">Бытовая химия</a>
             </li>
             <li class="mobile-submenu-item">
-              <a class="mobile-submenu-link" href="#" class="href"
+              <a class="mobile-submenu-link" href="#"
                 >Дезинфицирующие средства</a
               >
             </li>
@@ -215,13 +211,11 @@
               Безусловно, сплочённость команды профессионалов позволяет оценить
               значение форм воздействия.
             </p>
-            <text></text>
           </li>
           <li class="steps-item">
             <span class="steps-num">02</span>
             <h3 class="steps-title">Заключение договора</h3>
             <p class="steps">Лишь интерактивные прототипы призваны к ответу.</p>
-            <text></text>
           </li>
           <li class="steps-item">
             <span class="steps-num">03</span>
@@ -230,7 +224,6 @@
               А также стремящиеся вытеснить традиционное производство,
               нанотехнологии функционально разнесены на независимые элементы.
             </p>
-            <text></text>
           </li>
           <li class="steps-item">
             <span class="steps-num">04</span>
@@ -239,7 +232,6 @@
               В частности, экономическая повестка сегодняшнего дня говорит о
               возможностях приоритизации разума над эмоциями.
             </p>
-            <text></text>
           </li>
         </ol>
       </div>
