add: add adaptive for mobiles

--- a/index.html
+++ b/index.html
@@ -359,45 +359,38 @@
       </div>
     </section>
 
-    <section class="section trade-labels">
+    <section class="section trademark">
       <div class="container">
         <div class="separator"></div>
 
         <h2 class="section-title">Собственные торговые марки</h2>
 
-        <div class="trade-labels-content">
-          <h3 class="card-title">Автохимия AG-Tech</h3>
-
-          <p class="trade-labels-text">
-            Для современного мира разбавленное изрядной долей эмпатии,
-            рациональное мышление создаёт предпосылки для поставленных обществом
-            задач.
-          </p>
-
-          <img
-            src="img/AGTECH.svg"
-            alt="Автохимия AG-Tech"
-            class="trade-labels-image"
-          />
-        </div>
-        <div class="trade-labels-content">
-          <h3 class="card-title">Автохимия AP</h3>
-
-          <p class="trade-labels-text">
-            Для современного мира разбавленное изрядной долей эмпатии,
-            рациональное мышление создаёт предпосылки для поставленных обществом
-            задач.
-          </p>
-
-          <img
-            src="img/Vector.svg"
-            alt="Автохимия AP"
-            class="trade-labels-image"
-          />
+        <div class="trademark-cards">
+          <div class="trademark-card">
+            <svg class="trademark-card-logo">
+              <use href="img/sprite.svg#AGTECH"></use>
+            </svg>
+            <h3 class="trademark-card-title">Автохимия AG-Tech</h3>
+            <p class="trademark-card-text">
+              Для современного мира разбавленное изрядной долей эмпатии,
+              рациональное мышление создаёт предпосылки для поставленных
+              обществом задач.
+            </p>
+          </div>
+          <div class="trademark-card">
+            <svg class="trademark-card-logo">
+              <use href="img/sprite.svg#AP"></use>
+            </svg>
+            <h3 class="trademark-card-title">Автохимия AP</h3>
+            <p class="trademark-card-text">
+              Для современного мира разбавленное изрядной долей эмпатии,
+              рациональное мышление создаёт предпосылки для поставленных
+              обществом задач.
+            </p>
+          </div>
         </div>
       </div>
     </section>
-
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
