--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 Безусловно, сплочённость команды профессионалов позволяет
                 оценить значение форм воздействия.
               </p>
-              <a href="#" class="steps-link">Оставить заявку</a>
+              <a href="#" class="button-link">Оставить заявку</a>
             </li>
             <li class="swiper-slide steps-item">
               <span class="steps-num">02</span>
@@ -362,7 +362,6 @@
     <section class="section trademark">
       <div class="container">
         <div class="separator"></div>
-
         <h2 class="section-title">Собственные торговые марки</h2>
 
         <div class="trademark-cards">
@@ -387,6 +386,139 @@
               рациональное мышление создаёт предпосылки для поставленных
               обществом задач.
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section founder">
+      <img src="img/founder.png" alt="founder" class="founder-photo" />
+      <div class="container">
+        <div class="founder-content-wrapper">
+          <div class="founder-content">
+            <div class="separator"></div>
+            <h2 class="section-title">Отношение к делу и к клиентам</h2>
+            <p class="founder-text">
+              Кстати, интерактивные прототипы описаны максимально подробно.
+              Повседневная практика показывает, что укрепление и развитие
+              внутренней структуры говорит о возможностях соответствующих
+              условий активизации. Внезапно, независимые государства, которые
+              представляют собой яркий пример континентально-европейского типа
+              политической культуры, будут подвергнуты целой серии независимых
+              исследований. С учётом сложившейся международной обстановки,
+              синтетическое тестирование выявляет срочную потребность системы
+              массового участия. А ещё действия представителей оппозиции,
+              превозмогая сложившуюся непростую экономическую ситуацию, в равной
+              степени предоставлены сами себе. Не следует, однако, забывать, что
+              выбранный нами инновационный путь в значительной степени
+              обусловливает важность дальнейших направлений развития.
+            </p>
+            <a href="#" class="button-link">Подробнее о компании</a>
+          </div>
+          <!-- /.founder-content -->
+        </div>
+      </div>
+    </section>
+
+    <section class="section clients">
+      <div class="container">
+        <div class="separator"></div>
+        <div class="clients-wrapper">
+          <div class="clients-content">
+            <h2 class="section-title">
+              Производим аэрозольную продукцию для разных сфер
+            </h2>
+            <ul class="clients-list">
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#chemic"></use>
+                </svg>
+                Химические производства
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#cars"></use>
+                </svg>
+                Автомойки
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#brush"></use>
+                </svg>
+                Лаки и краски
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#cosmetic"></use>
+                </svg>
+                Косметические средства
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#car-cosm"></use>
+                </svg>
+                Автомобильная косметика
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#shirt"></use>
+                </svg>
+                Косметика по уходу за одеждой
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#boots"></use>
+                </svg>
+                Косметика по уходу за обувью
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#bricks"></use>
+                </svg>
+                Строительные материалы
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#food"></use>
+                </svg>
+                Пищевая продукция
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="clients-list-icon">
+                  <use href="img/sprite.svg#dots"></use>
+                </svg>
+                И многих других
+              </li>
+            </ul>
+          </div>
+          <div class="clients-logo-list">
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
+            <div class="client-logo-item">
+              <img src="img/client.png" alt="client" class="clients-logo" />
+            </div>
           </div>
         </div>
       </div>
