fix: clients-logo-item

--- a/index.html
+++ b/index.html
@@ -492,33 +492,33 @@
             </ul>
           </div>
           <div class="clients-logo-list">
-            <div class="client-logo-item">
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
-            <div class="client-logo-item">
+            </a>
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
-            <div class="client-logo-item">
+            </a>
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
-            <div class="client-logo-item">
+            </a>
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
-            <div class="client-logo-item">
+            </a>
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
-            <div class="client-logo-item">
+            </a>
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
-            <div class="client-logo-item">
+            </a>
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
-            <div class="client-logo-item">
+            </a>
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
-            <div class="client-logo-item">
+            </a>
+            <a href="#" clas="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
-            </div>
+            </a>
           </div>
         </div>
       </div>
