--- a/index.html
+++ b/index.html
@@ -492,31 +492,31 @@
             </ul>
           </div>
           <div class="clients-logo-list">
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
-            <a href="#" clas="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
           </div>
