--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
             </li>
           </ol>
           <!-- If we need navigation buttons -->
-          <div class="steps-buttons">
-            <div class="steps-button-prev">
+          <div class="steps-buttons primary-butons-wrapper">
+            <div class="steps-button-prev primary-button-prev">
               <svg width="36" height="24">
                 <use href="img/sprite.svg#arrow-prev"></use>
               </svg>
             </div>
-            <div class="steps-button-next">
+            <div class="steps-button-next primary-button-next">
               <svg width="36" height="24">
                 <use href="img/sprite.svg#arrow-next"></use>
               </svg>
@@ -520,6 +520,69 @@
               <img src="img/client.png" alt="client" class="clients-logo" />
             </a>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section blog">
+      <div class="container">
+        <div class="separator"></div>
+        <h2 class="section-title">Блог экспертов в области производства</h2>
+        <!-- Slider main container -->
+        <div class="swiper blog-slider">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <a href="#" class="swiper-slide blog-card"
+              ><img src="img/tubes.png" alt="" class="blog-card-image" />
+              <h3 class="blog-card-title">
+                Современная методология разработки одухотворила всех причастных
+              </h3>
+              <p class="blog-card-text">
+                Действия представителей оппозиции, превозмогая сложившуюся
+                непростую экономическую ситуацию, в равной степени
+                предоставлены...
+              </p>
+            </a>
+            <a href="#" class="swiper-slide blog-card"
+              ><img src="img/room.png" alt="" class="blog-card-image" />
+              <h3 class="blog-card-title">
+                Сложно сказать, почему жизнь прекрасна
+              </h3>
+              <p class="blog-card-text">
+                Действия представителей оппозиции, превозмогая сложившуюся
+                непростую экономическую ситуацию, в равной степени
+                предоставлены...
+              </p>
+            </a>
+            <a href="#" class="swiper-slide blog-card"
+              ><img src="img/tubes.png" alt="" class="blog-card-image" />
+              <h3 class="blog-card-title">
+                Современная методология разработки одухотворила всех причастных
+              </h3>
+              <p class="blog-card-text">
+                Сложно сказать, почему элементы политического процесса
+                функционально разнесены на независимые элементы. Безусловно,
+                высокотехнологичная...
+              </p>
+            </a>
+          </div>
+          <div class="blog-slider-footer">
+            <a href="#" class="button-link">Весь блог</a>
+            <div class="blog-buttons primary-butons-wrapper">
+              <div class="blog-button-prev primary-button-prev">
+                <svg width="36" height="24">
+                  <use href="img/sprite.svg#arrow-prev"></use>
+                </svg>
+              </div>
+              <div class="blog-button-next primary-button-next">
+                <svg width="36" height="24">
+                  <use href="img/sprite.svg#arrow-next"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <!-- /.blog-slider-footer -->
         </div>
       </div>
     </section>
