--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <a href="tel:+74996861014" class="mobile-phone">+7 (499) 686-10-14</a>
       <div class="mobile-info">
-        <svg class="button-icon" width="24" height="24">
+        <svg class="phone-icon" width="24" height="24">
           <use href="img/mark.svg"></use>
         </svg>
         <address class="mobile-info-address">
@@ -107,7 +107,7 @@
         </a>
       </div>
 
-      <button class="navbar-button button">
+      <button class="navbar-button button" data-toggle="modal">
         <svg class="button-icon" width="24" height="24">
           <use href="img/sprite.svg#phone"></use>
         </svg>
@@ -131,7 +131,9 @@
             поведения.
           </p>
 
-          <button class="button header-button">Подробнее о компании</button>
+          <button class="button header-button" data-toggle="modal">
+            Подробнее о компании
+          </button>
         </div>
 
         <!-- Slider main container [Основной блок слайдера] -->
@@ -599,17 +601,21 @@
               случаях!
             </p>
             <div class="input-group-wrapper">
-              <div class="input-group">
+              <div class="input-group modal-input-group">
                 <input
                   id="user-name"
                   type="text"
                   class="input"
                   placeholder=" "
                 />
-                <label class="input-group-label" for="user-name">Имя</label>
+                <label
+                  class="input-group-label modal-input-label"
+                  for="user-name"
+                  >Имя</label
+                >
               </div>
               <!-- /.input-group -->
-              <div class="input-group">
+              <div class="input-group modal-input-group">
                 <input
                   id="user-phone"
                   type="tel"
@@ -617,7 +623,9 @@
                   placeholder=" "
                 />
 
-                <label class="input-group-label" for="user-phone"
+                <label
+                  class="input-group-label modal-input-label"
+                  for="user-phone"
                   >Номер телефона</label
                 >
               </div>
@@ -768,6 +776,66 @@
       </div>
       <!-- /.container -->
     </footer>
+
+    <div class="modal">
+      <div class="modal-dialog">
+        <h2 class="modal-title">Есть вопросы?</h2>
+        <a href="#" class="modal-close" data-toggle="modal">
+          <svg class="close-icon" width="24" height="24">
+            <use href="img/sprite.svg#close"></use>
+          </svg>
+        </a>
+        <p class="modal-text">
+          Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время
+          ответит на все интересующие вопросы и поможем даже в самых сложных
+          случаях!
+        </p>
+        <form action="#" class="modal-form">
+          <div class="input-group-wrapper input-group-vertical">
+            <div class="input-group">
+              <input
+                id="modal-user-name"
+                type="text"
+                class="input modal-input"
+                placeholder=" "
+              />
+              <label class="input-group-label" for="modal-user-name">Имя</label>
+            </div>
+            <!-- /.input-group -->
+            <div class="input-group">
+              <input
+                id="modal-user-phone"
+                type="tel"
+                class="input modal-input"
+                placeholder=" "
+              />
+
+              <label class="input-group-label" for="modal-user-phone"
+                >Номер телефона</label
+              >
+            </div>
+            <!-- /.input-group -->
+          </div>
+          <!-- /.input-group-wrapper -->
+          <div class="modal-form-footer">
+            <button type="submit" class="button modal-form-button">
+              Отправить заявку
+            </button>
+            <div class="notify">
+              <svg class="notify-icon" width="14" height="14">
+                <use href="img/sprite.svg#shield"></use>
+              </svg>
+              <p class="notify-text">
+                Обращаясь к нам вы получаете не только профессиональную работу,
+                но и абсолютную конфиденциальность информации!
+              </p>
+            </div>
+          </div>
+          <!-- /.modal-form-footer -->
+        </form>
+      </div>
+    </div>
+
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
